Make sure testimonials are aligned horizontally

--- a/src/scss/components/_testimonial.scss
+++ b/src/scss/components/_testimonial.scss
@@ -5,6 +5,7 @@
   flex-basis: 33%;
   flex-direction: column;
   gap: 6rem;
+  justify-content: space-between;
   text-align: center;
 }
 
